 * Allow custom elements for focus rectangles of some widgets.
 * Removed the redundant key "no_focus_rect".
 * Safeguard against a badly edited kvconfig file when writing to it with Kvantum Manager.
 * When the "opaque_colors" workaround is used, apply the translucent alternate base color over the base color.
 * Added a (temporary) workaround for a nasty bug about text translucency in Qt 5.14.0.

V0.13.0
---------
 * In tab size calculation, consider the actual tab icon size instead of PM_TabBarIconSize if it exists.
 * Don't decrease the minimum size of a spinbox if it's more than enough for its text.
 * Don't avoid elided texts in task buttons of LXQt Panel.
 * Added a key for the thickness of toolbar separators.
 * Ensure correct menu blurring if the compositor starts with a short delay.
 * Prevent menus from switching to another screen with a multi-screen setup.
 * Avoid scrollbars in the third page of Kvantum Manager the first time it's shown.
 * Put menubar MDI buttons inside menubar frame.
 * Don't show the arrow of a tool button with instant popup.
 * Fixed an old problem in toolbars of dark-and-light themes.
 * A safeguard against buggy Qt plugins that don't handle the tool-button style correctly. (So far, only qt5ct has had bugs.)

V0.12.1
---------
 * Added a hacking option for kinetic scrolling to Kvantum Manager. Although Qt's kinetic scrolling has bugs, it doesn't cause crashes with Qt ≥ 5.13.1.
 * Fixed problems in updating the GUI of Kvantum Manager on theme change.

V0.12.0
---------
 * Basic support for FreeBSD.
 * Added a new option for the click behavior with 3 values for following the current DE or using single or double click (and removed the old click option).
 * A workaround for the bug in Qt 5.13.1 → QWidget::setAttribute(), when the app style is changed.
 * Ignore the disabled state of tree expanders (because some apps, like Dolphin, don't set the state to enabled).
 * Removed the wayland menu translucency workaround for Qt ≥ 5.12.