@@ -9,6 +9,7 @@ V0.14.0
  * Safeguard against a badly edited kvconfig file when writing to it with Kvantum Manager.
  * When the "opaque_colors" workaround is used, apply the translucent alternate base color over the base color.
  * Added a (temporary) workaround for a nasty bug about text translucency in Qt 5.14.0.
+ * Handle PlaceholderText with Qt ≥ 5.12.
 
 V0.13.0
 ---------
